Frontend code to templates, complete
Some testing remaining

--- a/FrontEnd/form.html
+++ b/FrontEnd/form.html
@@ -1,57 +1,55 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8" />
-    <title>hospi</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="bg"></div>
-   <nav>
-      <div class="nav-content">
-        <div class="logo">
-          <a href="#">hospi</a>
-        </div>
-        <ul class="nav-links">
-          <li><img src="home.png" alt="home" class="home_icon"><a href="#" class="glow-on-hover">Home</a></li>
-          <li>
-            <a href="#" class="glow-on-hover">HTML & CSS</a>
-            <i class="bx bxs-chevron-down htmlcss-arrow arrow"></i>
-          </li>
-          <li><a href="#" class="glow-on-hover">Patient</a></li>
-          <li><a href="#" class="glow-on-hover">Doctor</a></li>
-          <li><a href="#" class="glow-on-hover">Staff</a></li>
-          <li><a href="#" class="glow-on-hover">Beds</a></li>
-        </ul>
-      </div>
-    </nav>
 
-    
-    <div class="wrapper">
-      <form action="#">
-        <h2>Login</h2>
-          <div class="input-field">
-          <input type="text" required>
-          <label>Enter your email</label>
-        </div>
-        <div class="input-field">
-          <input type="password" required>
-          <label>Enter your password</label>
-        </div>
-        <div class="forget">
-          <label for="remember">
-            <input type="checkbox" id="remember">
-            <p>Remember me</p>
-          </label>
-          <a href="#">Forgot password?</a>
-        </div>
-        <button type="submit">Log In</button>
-        <div class="register">
-          <p>Don't have an account? <a href="#">Register</a></p>
-        </div>
-      </form>
+<head>
+  <meta charset="UTF-8" />
+  <title>MediFlow</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="bg"></div>
+  <nav>
+    <div class="nav-content">
+      <div class="logo">
+        <a href="#">MediFlow</a>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#" class="glow-on-hover">Home</a></li>
+        <li><a href="#" class="glow-on-hover">Patient</a></li>
+        <li><a href="#" class="glow-on-hover">Doctor</a></li>
+        <li><a href="#" class="glow-on-hover">Staff</a></li>
+        <li><a href="#" class="glow-on-hover">Beds</a></li>
+      </ul>
     </div>
-  
-  </body>
-  </html>
-  
+  </nav>
+
+
+  <div class="wrapper">
+    <form action="#">
+      <h2>MediFlow</h2>
+      <div class="input-field">
+        <input type="text" required>
+        <label>Enter your email</label>
+      </div>
+      <div class="input-field">
+        <input type="password" required>
+        <label>Enter your password</label>
+      </div>
+      <div class="forget">
+        <label for="remember">
+          <input type="checkbox" id="remember">
+          <p>Remember me</p>
+        </label>
+        <a href="#">Forgot password?</a>
+      </div>
+      <button type="submit">Log In</button>
+      <div class="register">
+        <p>Don't have an account? <a href="#">Register</a></p>
+      </div>
+    </form>
+  </div>
+
+</body>
+
+</html>
